<resources>
    <string name="app_name">Health-App</string>
    <string name="hello_aishw">
\n\nHello,\n\n\n<b>Aishwarya Singh </b>👋🏻
</string>
    <string name="home">
Home
</string>
    <string name="health_data">
Health \nData
</string>
    <string name="prescription">
Prescription
</string>
    <string name="doctor_s_ad">
Doctor\'s advice
</string>
    <string name="find_nurse">
        <b>Find Nurse</b>
</string>
    <string name="locate_nurs">
        <b>Locate nurse</b>
</string>
    <string name="call_ambula">
        <b>Call Ambulance</b>
</string>
    <string name="one_call_aw">
        <b>One call away</b>
</string>
    <string name="book_an_app">
        <b>Book an Appointment</b>
</string>
    <string name="nursing_fac">
        <b>Nursing Facilities One Step Away</b>
</string>
    <string name="nurse_log">
        <b>Nurse Log</b>
</string>
    <string name="detailed_en">
        <b>Entry Visits</b>
</string>
    <string name="search_">
Search
</string>
    <string name="an_apple_a_">
An Apple a day keeps the doctor away
</string>
    <string name="log_in">
        <b>SIGN IN</b>
</string>
    <string name="or">
        <b>OR</b>
</string>
    <string name="don_t_have_">
<b>Don\'t have an account</b>
    </string>
    <string name="sign_in">
            <b>SIGN UP</b>
    </string>
    <string name="signintext">
        <b>SIGN IN</b>
</string>
    <string name="x">
        <b>x</b>
</string>
    <string name="patient_s_p">
        <b>Phone Number</b>
</string>
    <string name="password">
        <b>Password</b>
</string>
    <string name="show_passwo">
        <b>Show password</b>
</string>
    <string name="submit">
<b>LOG IN</b>
</string>
    <string name="signup">
<b>SIGNUP</b>
</string>
    <string name="new_here_no">
        <b>New here, not a problem</b>
</string>
    <string name="sign_up">
        <b>SIGN UP</b>
</string>
    <string name="patient_s_n">
<b>Name</b>
</string>
    <string name="patient_s_a">
        <b>Age</b>
</string>
    <string name="in_years">
        <b>In Years</b>
</string>
    <string name="patient_s_g">
            <b>Gender</b>
</string>
    <string name="male">
<b>Male</b>
</string>
    <string name="female">
<b>Female</b>
</string>
    <string name="transgender">
        <b>Other</b>
</string>
    <string name="patientaddhead">
 <b>Address</b>
</string>
    <string name="city">
        <b>City</b>
</string>
    <string name="state">
<b>State</b>
</string>
    <string name="next">
        <b>NEXT</b>
</string>
    <string name="some_id">
        <b>+91</b>
</string>

    <string name="patient_s_e">
        <b>E-mail Id</b>
</string>
    <string name="confirm_pas">
        <b>Confirm Password</b>
</string>
</resources>