<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_lar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F9"
    android:clipToOutline="true"
    tools:context=".signup">

    <TextView
        android:id="@+id/new_here_no"
        android:layout_width="195dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp"
        android:gravity="top"
        android:text="@string/new_here_no"
        android:textAppearance="@style/new_here_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:gravity="top"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_here_no" />

    <TextView
        android:id="@+id/patient_s_n"
        android:layout_width="114dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="134dp"
        android:gravity="top"
        android:text="@string/patient_s_n"
        android:textAppearance="@style/patient_s_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rectangle_1"
        android:layout_width="304dp"
        android:layout_height="26dp"
        android:layout_marginTop="7dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/patname"
        app:layout_constraintStart_toStartOf="@+id/patient_s_n"
        app:layout_constraintTop_toBottomOf="@+id/patient_s_n" />

    <TextView
        android:id="@+id/patient_s_a"
        android:layout_width="114dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:gravity="top"
        android:text="@string/patient_s_a"
        android:textAppearance="@style/patient_s_a"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

    <EditText
        android:id="@+id/age"
        android:layout_width="107dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/patage"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="@+id/patient_s_a"
        app:layout_constraintTop_toBottomOf="@+id/patient_s_a" />

    <TextView
        android:id="@+id/in_years"
        android:layout_width="76dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:gravity="top"
        android:text="@string/in_years"
        android:textAppearance="@style/in_years"
        app:layout_constraintStart_toEndOf="@+id/age"
        app:layout_constraintTop_toTopOf="@+id/age" />



</androidx.constraintlayout.widget.ConstraintLayout>