<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_lar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#F2F2F9">

    <View
        android:id="@+id/login"
        android:layout_width="214dp"
        android:layout_height="65dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/signinoption"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="50dp"
        android:gravity="top"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/login" />

    <TextView
        android:id="@+id/or"
        android:layout_width="39dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:text="@string/or"
        android:textAppearance="@style/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="169dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <View
        android:id="@+id/signin"
        android:layout_width="214dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/signinoption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/don_t_have_" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:gravity="top"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/signin"
        app:layout_constraintStart_toStartOf="@+id/signin"
        app:layout_constraintTop_toTopOf="@+id/signin" />
</androidx.constraintlayout.widget.ConstraintLayout>